--- a/PowerShell/local.settings.json.example
+++ b/PowerShell/local.settings.json.example
@@ -5,6 +5,6 @@
     "FUNCTIONS_WORKER_RUNTIME_VERSION": "~7",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "BrokerList": "{YOUR_EVENT_HUBS_NAMESPACE}.servicebus.windows.net:9093",
-    "Password": "{YOUR_EVENT_HUBS_CONNECTION_STRING}"
+    "EventHubsConnectionString": "{YOUR_EVENT_HUBS_CONNECTION_STRING}"
   }
 }
