--- a/Python/local.settings.json.example
+++ b/Python/local.settings.json.example
@@ -4,6 +4,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "python",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "BrokerList": "{YOUR_EVENT_HUBS_NAMESPACE}.servicebus.windows.net:9093",
-    "Password": "{YOUR_EVENT_HUBS_CONNECTION_STRING}"
+    "EventHubsConnectionString": "{YOUR_EVENT_HUBS_CONNECTION_STRING}"
   }
 }
